--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />     
 
-	<link rel="stylesheet" type="text/css" href="assets/css/wddfinalproject-style.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 	</script> 
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
         </script> 
 
 	<script src = "assets/js/script.js"></script>
